.antlr/xvaParser.java
// Generated from /Users/dylan/Projects/xva/xva.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class xvaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LET=3, MUTABLE=4, NULL=5, DEFAULT=6, TRUE=7, FALSE=8, 
		DEF=9, VOID=10, END=11, IF=12, ELSE=13, ELSE_IF=14, LOOP=15, BREAK=16, 
		WHILE=17, ASSIGNMENT_OPERATOR=18, LOWER_THAN_OPERATOR=19, LOWER_THAN_EQUAL_OPERATOR=20, 
		GREATER_THAN_OPERATOR=21, GREATER_THAN_EQUAL_OPERATOR=22, EQUALITY_OPERATOR=23, 
		IS_OPERATOR=24, INTEGER_CONSTANT_DECIMAL=25, INTEGER_CONSTANT_OCTAL=26, 
		INTEGER_CONSTANT_HEXADECIMAL=27, INTEGER_CONSTANT_BINARY=28, FLOAT_CONSTANT=29, 
		DOUBLE_CONSTANT=30, PRECISE_CONSTANT=31, CHAR_CONSTANT=32, STRING_CONSTANT=33, 
		IDENTIFIER=34, INTEGER_TYPE=35, FLOAT_TYPE=36, STRING_TYPE=37, BOOLEAN_TYPE=38, 
		SEMICOLON=39, COLON=40, FAT_ARROW=41, SINGLE_QUOTE=42, DOUBLE_QUOTE=43, 
		EMOTICONS=44, WS=45;
	public static final int
		RULE_module = 0, RULE_builtInType = 1, RULE_typeAnnotation = 2, RULE_declaration = 3, 
		RULE_assignment = 4, RULE_statement = 5, RULE_functionParameter = 6, RULE_returnType = 7, 
		RULE_parameterList = 8, RULE_simpleFunction = 9, RULE_complexFunction = 10, 
		RULE_lambdaExpr = 11, RULE_anonymousFunction = 12, RULE_integerConstant = 13, 
		RULE_floatConstant = 14, RULE_stringConstant = 15, RULE_charConstant = 16, 
		RULE_booleanConstant = 17, RULE_expression = 18, RULE_parenthesisedExpr = 19, 
		RULE_functionCall = 20, RULE_controlBlock = 21, RULE_ifBlock = 22, RULE_loopBlock = 23, 
		RULE_whileBlock = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"module", "builtInType", "typeAnnotation", "declaration", "assignment", 
			"statement", "functionParameter", "returnType", "parameterList", "simpleFunction", 
			"complexFunction", "lambdaExpr", "anonymousFunction", "integerConstant", 
			"floatConstant", "stringConstant", "charConstant", "booleanConstant", 
			"expression", "parenthesisedExpr", "functionCall", "controlBlock", "ifBlock", 
			"loopBlock", "whileBlock"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'let'", "'mutable'", "'null'", "'default'", "'true'", 
			"'false'", "'def'", "'void'", "'end'", "'if'", "'else'", "'else if'", 
			"'loop'", "'break'", "'while'", "'='", "'<'", "'<='", "'>'", "'>='", 
			"'=='", "'is'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'boolean'", "';'", "':'", "'=>'", "'''", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "LET", "MUTABLE", "NULL", "DEFAULT", "TRUE", "FALSE", 
			"DEF", "VOID", "END", "IF", "ELSE", "ELSE_IF", "LOOP", "BREAK", "WHILE", 
			"ASSIGNMENT_OPERATOR", "LOWER_THAN_OPERATOR", "LOWER_THAN_EQUAL_OPERATOR", 
			"GREATER_THAN_OPERATOR", "GREATER_THAN_EQUAL_OPERATOR", "EQUALITY_OPERATOR", 
			"IS_OPERATOR", "INTEGER_CONSTANT_DECIMAL", "INTEGER_CONSTANT_OCTAL", 
			"INTEGER_CONSTANT_HEXADECIMAL", "INTEGER_CONSTANT_BINARY", "FLOAT_CONSTANT", 
			"DOUBLE_CONSTANT", "PRECISE_CONSTANT", "CHAR_CONSTANT", "STRING_CONSTANT", 
			"IDENTIFIER", "INTEGER_TYPE", "FLOAT_TYPE", "STRING_TYPE", "BOOLEAN_TYPE", 
			"SEMICOLON", "COLON", "FAT_ARROW", "SINGLE_QUOTE", "DOUBLE_QUOTE", "EMOTICONS", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "xva.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public xvaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(xvaParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<SimpleFunctionContext> simpleFunction() {
			return getRuleContexts(SimpleFunctionContext.class);
		}
		public SimpleFunctionContext simpleFunction(int i) {
			return getRuleContext(SimpleFunctionContext.class,i);
		}
		public List<ComplexFunctionContext> complexFunction() {
			return getRuleContexts(ComplexFunctionContext.class);
		}
		public ComplexFunctionContext complexFunction(int i) {
			return getRuleContext(ComplexFunctionContext.class,i);
		}
		public List<ControlBlockContext> controlBlock() {
			return getRuleContexts(ControlBlockContext.class);
		}
		public ControlBlockContext controlBlock(int i) {
			return getRuleContext(ControlBlockContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LET) | (1L << DEF) | (1L << IF) | (1L << LOOP) | (1L << BREAK) | (1L << WHILE) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(54);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(50);
					statement();
					}
					break;
				case 2:
					{
					setState(51);
					simpleFunction();
					}
					break;
				case 3:
					{
					setState(52);
					complexFunction();
					}
					break;
				case 4:
					{
					setState(53);
					controlBlock();
					}
					break;
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BuiltInTypeContext extends ParserRuleContext {
		public TerminalNode INTEGER_TYPE() { return getToken(xvaParser.INTEGER_TYPE, 0); }
		public TerminalNode FLOAT_TYPE() { return getToken(xvaParser.FLOAT_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(xvaParser.STRING_TYPE, 0); }
		public TerminalNode BOOLEAN_TYPE() { return getToken(xvaParser.BOOLEAN_TYPE, 0); }
		public BuiltInTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_builtInType; }
	}

	public final BuiltInTypeContext builtInType() throws RecognitionException {
		BuiltInTypeContext _localctx = new BuiltInTypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_builtInType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER_TYPE) | (1L << FLOAT_TYPE) | (1L << STRING_TYPE) | (1L << BOOLEAN_TYPE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeAnnotationContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(xvaParser.COLON, 0); }
		public BuiltInTypeContext builtInType() {
			return getRuleContext(BuiltInTypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(xvaParser.IDENTIFIER, 0); }
		public TerminalNode MUTABLE() { return getToken(xvaParser.MUTABLE, 0); }
		public TypeAnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeAnnotation; }
	}

	public final TypeAnnotationContext typeAnnotation() throws RecognitionException {
		TypeAnnotationContext _localctx = new TypeAnnotationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeAnnotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(COLON);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUTABLE) {
				{
				setState(64);
				match(MUTABLE);
				}
			}

			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER_TYPE:
			case FLOAT_TYPE:
			case STRING_TYPE:
			case BOOLEAN_TYPE:
				{
				setState(67);
				builtInType();
				}
				break;
			case IDENTIFIER:
				{
				setState(68);
				match(IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(xvaParser.LET, 0); }
		public TerminalNode IDENTIFIER() { return getToken(xvaParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT_OPERATOR() { return getToken(xvaParser.ASSIGNMENT_OPERATOR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TypeAnnotationContext typeAnnotation() {
			return getRuleContext(TypeAnnotationContext.class,0);
		}
		public SimpleFunctionContext simpleFunction() {
			return getRuleContext(SimpleFunctionContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(71);
				match(LET);
				setState(72);
				match(IDENTIFIER);
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COLON) {
					{
					setState(73);
					typeAnnotation();
					}
				}

				setState(76);
				match(ASSIGNMENT_OPERATOR);
				setState(77);
				expression(0);
				}
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				simpleFunction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(xvaParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT_OPERATOR() { return getToken(xvaParser.ASSIGNMENT_OPERATOR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(IDENTIFIER);
			setState(82);
			match(ASSIGNMENT_OPERATOR);
			setState(83);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(xvaParser.SEMICOLON, 0); }
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(xvaParser.BREAK, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(85);
				declaration();
				}
				break;
			case 2:
				{
				setState(86);
				assignment();
				}
				break;
			case 3:
				{
				setState(87);
				functionCall();
				}
				break;
			case 4:
				{
				setState(88);
				match(BREAK);
				}
				break;
			}
			setState(91);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionParameterContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(xvaParser.IDENTIFIER, 0); }
		public TypeAnnotationContext typeAnnotation() {
			return getRuleContext(TypeAnnotationContext.class,0);
		}
		public FunctionParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionParameter; }
	}

	public final FunctionParameterContext functionParameter() throws RecognitionException {
		FunctionParameterContext _localctx = new FunctionParameterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(IDENTIFIER);
			setState(94);
			typeAnnotation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnTypeContext extends ParserRuleContext {
		public TypeAnnotationContext typeAnnotation() {
			return getRuleContext(TypeAnnotationContext.class,0);
		}
		public TerminalNode COLON() { return getToken(xvaParser.COLON, 0); }
		public TerminalNode VOID() { return getToken(xvaParser.VOID, 0); }
		public ReturnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnType; }
	}

	public final ReturnTypeContext returnType() throws RecognitionException {
		ReturnTypeContext _localctx = new ReturnTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnType);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				typeAnnotation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				match(COLON);
				setState(98);
				match(VOID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<FunctionParameterContext> functionParameter() {
			return getRuleContexts(FunctionParameterContext.class);
		}
		public FunctionParameterContext functionParameter(int i) {
			return getRuleContext(FunctionParameterContext.class,i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__0);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(102);
				functionParameter();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleFunctionContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(xvaParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(xvaParser.IDENTIFIER, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode FAT_ARROW() { return getToken(xvaParser.FAT_ARROW, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SimpleFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleFunction; }
	}

	public final SimpleFunctionContext simpleFunction() throws RecognitionException {
		SimpleFunctionContext _localctx = new SimpleFunctionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_simpleFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(DEF);
			setState(111);
			match(IDENTIFIER);
			setState(112);
			parameterList();
			setState(113);
			returnType();
			setState(114);
			match(FAT_ARROW);
			setState(115);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComplexFunctionContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(xvaParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(xvaParser.IDENTIFIER, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public TerminalNode END() { return getToken(xvaParser.END, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ComplexFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexFunction; }
	}

	public final ComplexFunctionContext complexFunction() throws RecognitionException {
		ComplexFunctionContext _localctx = new ComplexFunctionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_complexFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(DEF);
			setState(118);
			match(IDENTIFIER);
			setState(119);
			parameterList();
			setState(120);
			returnType();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LET) | (1L << DEF) | (1L << BREAK) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(121);
				statement();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LambdaExprContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(xvaParser.DEF, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode FAT_ARROW() { return getToken(xvaParser.FAT_ARROW, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public LambdaExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambdaExpr; }
	}

	public final LambdaExprContext lambdaExpr() throws RecognitionException {
		LambdaExprContext _localctx = new LambdaExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_lambdaExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(DEF);
			setState(130);
			parameterList();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(131);
				returnType();
				}
			}

			setState(134);
			match(FAT_ARROW);
			setState(135);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnonymousFunctionContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(xvaParser.DEF, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode END() { return getToken(xvaParser.END, 0); }
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public AnonymousFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anonymousFunction; }
	}

	public final AnonymousFunctionContext anonymousFunction() throws RecognitionException {
		AnonymousFunctionContext _localctx = new AnonymousFunctionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_anonymousFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(DEF);
			setState(138);
			parameterList();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(139);
				returnType();
				}
			}

			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LET) | (1L << DEF) | (1L << BREAK) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(142);
				statement();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerConstantContext extends ParserRuleContext {
		public TerminalNode INTEGER_CONSTANT_DECIMAL() { return getToken(xvaParser.INTEGER_CONSTANT_DECIMAL, 0); }
		public TerminalNode INTEGER_CONSTANT_OCTAL() { return getToken(xvaParser.INTEGER_CONSTANT_OCTAL, 0); }
		public TerminalNode INTEGER_CONSTANT_HEXADECIMAL() { return getToken(xvaParser.INTEGER_CONSTANT_HEXADECIMAL, 0); }
		public TerminalNode INTEGER_CONSTANT_BINARY() { return getToken(xvaParser.INTEGER_CONSTANT_BINARY, 0); }
		public IntegerConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integerConstant; }
	}

	public final IntegerConstantContext integerConstant() throws RecognitionException {
		IntegerConstantContext _localctx = new IntegerConstantContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_integerConstant);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER_CONSTANT_DECIMAL) | (1L << INTEGER_CONSTANT_OCTAL) | (1L << INTEGER_CONSTANT_HEXADECIMAL) | (1L << INTEGER_CONSTANT_BINARY))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
